# pickmytrade_validation

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.py
src/pickmytrade_validation/: __init__.py  broker_capabilities.py  enums.py  rules.py  spread_validator.py  sub_validator.py  validator.py
src/pickmytrade_validation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_broker_capabilities_spreads.py  test_spread_validator.py  test_validator.py
